[package]
name = "test-budget"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"

[dependencies.soroban-sdk]
path = "../rs-soroban-sdk/soroban-sdk"

[dependencies.soroban-env-common]
path = "../rs-soroban-env/soroban-env-common"

[dev_dependencies.soroban-sdk]
path = "../rs-soroban-sdk/soroban-sdk"
features = ["testutils"]

[patch."https://github.com/stellar/rs-soroban-env"]
soroban-env-common = { path = "../rs-soroban-env/soroban-env-common" }
soroban-env-guest = { path = "../rs-soroban-env/soroban-env-guest" }
soroban-env-host = { path = "../rs-soroban-env/soroban-env-host" }

[features]
testutils = ["soroban-sdk/testutils"]
